--- a/common/styles/content_style.css
+++ b/common/styles/content_style.css
@@ -66,7 +66,7 @@ body,
    Example Usage Classes
 ======================= */
 .heading {
-    background-color: var(--color-heading);
+    background-color: var(--color-heading) !important;
     color: white;
     padding: 10px;
 }
@@ -95,4 +95,9 @@ body,
 
 .text-danger {
   color: var(--color-danger) !important;
+}
+
+#copy-job-details{
+    max-height: 400px !important;
+    overflow: auto;
 }
