added display keyword feature

--- a/common/styles/content_style.css
+++ b/common/styles/content_style.css
@@ -106,3 +106,10 @@ body,
     max-height: 400px !important;
     overflow: auto;
 }
+
+
+.badge-container{
+  max-height: 150px;
+    overflow: auto;
+}
+
